Fix wrapping of person hover info

--- a/assets/stylesheets/pages/team.styl
+++ b/assets/stylesheets/pages/team.styl
@@ -125,6 +125,9 @@ for hour in 0 1 2 3 4 5 6 7 22 23
   p
     margin: 0
     line-height: 1.1em
+    text-overflow: clip
+    white-space: nowrap
+    overflow: hidden
 
   .person-name
     margin-bottom: 0.3em
